# anilist-random-picker

./: .env.template  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
templates/: index.html
