[project]
name = "anilist-random-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "axiom-py>=0.9.1",
    "fastapi>=0.125.0",
    "granian[uvloop]>=2.6.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "uvicorn>=0.38.0",
]
